package at.jku.werewolf.io.lobbymanagement;

public enum GameRole {
    WEREWOLF,VILLAGER
}
