@startuml

title __BACKEND's Class Diagram__\n


    class MavenWrapperDownloader {
    }

  


    namespace t.jku.werewolf.io {
      class at.jku.werewolf.io.Application {
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace config {
        class at.jku.werewolf.io.config.WebConfig {
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace game {
        class at.jku.werewolf.io.game.CalculateResults {
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace game {
        class at.jku.werewolf.io.game.GameResult {
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace game {
        class at.jku.werewolf.io.game.VotingController {
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace lobbymanagement {
        class at.jku.werewolf.io.lobbymanagement.GameLobby {
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace lobbymanagement {
        enum GameRole {
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace lobbymanagement {
        class at.jku.werewolf.io.lobbymanagement.LobbyConfiguration {
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace lobbymanagement {
        class at.jku.werewolf.io.lobbymanagement.LobbyController {
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace lobbymanagement {
        interface at.jku.werewolf.io.lobbymanagement.LobbyRepository {
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace lobbymanagement {
        class at.jku.werewolf.io.lobbymanagement.Player {
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace lobbymanagement {
        interface at.jku.werewolf.io.lobbymanagement.PlayerRepository {
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace lobbymanagement {
        class at.jku.werewolf.io.lobbymanagement.ReturnFromCreateLobby {
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace stompconfiguration {
        class at.jku.werewolf.io.stompconfiguration.GreetingController {
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace stompconfiguration {
        class at.jku.werewolf.io.stompconfiguration.WebSocketConfig {
        }
      }
    }
  
  

  at.jku.werewolf.io.config.WebConfig .up.|> org.springframework.web.servlet.config.annotation.WebMvcConfigurer
  at.jku.werewolf.io.game.GameResult o-- at.jku.werewolf.io.lobbymanagement.GameRole : hasWon
  at.jku.werewolf.io.game.VotingController o-- at.jku.werewolf.io.lobbymanagement.LobbyRepository : repo
  at.jku.werewolf.io.lobbymanagement.GameLobby .up.|> java.io.Serializable
  at.jku.werewolf.io.lobbymanagement.LobbyController o-- at.jku.werewolf.io.lobbymanagement.PlayerRepository : playerRepo
  at.jku.werewolf.io.lobbymanagement.LobbyController o-- at.jku.werewolf.io.lobbymanagement.LobbyRepository : repo
  at.jku.werewolf.io.lobbymanagement.Player .up.|> java.io.Serializable
  at.jku.werewolf.io.lobbymanagement.Player o-- at.jku.werewolf.io.lobbymanagement.GameRole : role
  at.jku.werewolf.io.stompconfiguration.WebSocketConfig .up.|> org.springframework.web.socket.config.annotation.WebSocketMessageBrokerConfigurer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
